# PGE

./: .gitignore  PKG-INFO  __init__.py  colors.py  fix_setup.py  install.bat  install.py  install.sh  pivot.py  pyproject.toml  rect.py  save.py  settings.py  setup.py  tests.py
Writerside/: api.tree  c.list  docs.tree  guide.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml
libraries/: group.py  roundrect.py
pygameextra/: PKG-INFO  __init__.py  anim.py  animator.py  button.py  colors.py  context.py  debug.py  display.py  draw.py  event.py  filemanage.py  fill.py  fingersupport.py  floating_methods.py  fpslogger.py  image.py  infinitygrid.py  layer_methods.py  math.py  modified.py  mouse.py  music.py  pnzc.py  popup.py  pygame.py  pyproject.toml  recorder.py  rect.py  settings.py  setup.py  sfx.py  sheet.py  sheet_handlers.py  smooth.py  sorters.py  sprite.py  text.py  time.py  tsx.py  (+1 more)
pygameextra-tester/: pygameextra-tester.py
pygameextra/examples/pong/: pygameextra-pong
pygameextra/pygameextra/: __init__.py  colors.py  install.py  settings.py  values.py
pygameextra/pygameextra/System Volume Information/: IndexerVolumeGuid
pygameextra/pygameextra/examples/pong/: pygameextra-pong
pygameextra/pygameextra/pygameextra_pong.egg-info/: PKG-INFO  SOURCES.txt
pygameextra/pygameextra/pygameextra_tester.egg-info/: PKG-INFO  SOURCES.txt
pygameextra/pygameextra/tests/: test_draw.py
pygameextra/pygameextra_tester.egg-info/: PKG-INFO  SOURCES.txt
pygameextra_tester/: __init__.py
tests/: test_music.py  test_sound.py  test_sprite.py
(+21 files in other folders)
