[tool.poetry]
name = "PygameExtra"
version = "1.6.5.2"
description = "pygame extra is a mask for pygame, you can easily make complex games and or apps with much less lines then you would of before, Pygame Extra makes coding easier. The online documentation can be found at: https://pygame-extra.readthedocs.io/en/latest/"
authors = ["RedstoneHair"]
license = "BSD-3-Clause"
packages = [
    { include = "pygameextra" },
]
[tool.poetry.dependencies]
python = ">=3.5"
pygame = ">=1.9.6"
requests = ">=2.22.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
